--- a/src/pages/user/OfferDetails.css
+++ b/src/pages/user/OfferDetails.css
@@ -150,7 +150,7 @@
     width: 15%;
     font-weight: bold;
     font-size: 0.95rem;
-    box-shadow: 0 4px 12px 0 rgba(0,0,0,0.2), 0 2px 16px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 2px 16px 0 rgba(0,0,0,0.19);
 }
 
 #form-submit:hover {
